# choice_auto_mod

./: Cargo.toml
res/: mod.html
src/: main.rs
