[package]
name = "choice_auto_mod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
indoc = "2.0.1"
simple-error = "0.3.0"
smali = { git = "https://github.com/MegaBluejay/smali.git", rev = "0bfd12b" }
